--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,13 +1,15 @@
 :root {
-  --color-background: rgb(110, 111, 255);  /* Цвет фона */
-  --color-board: #f0f0f0f4;        /* Цвет игровой доски */
-  --color-text: #333333;         /* Цвет шрифта */
-  
-  --color-player-1: #ff6b6b;     /* Цвет игрока 1 */
-  --color-player-2: #4ecdc4;     /* Цвет игрока 2 */
+  --color-background: rgba(110, 111, 255, 1); /* Цвет фона */
+  --color-board: rgba(240, 240, 240, 1); /* Цвет игровой доски */
+  --color-text: rgba(51, 51, 51, 1);
+  --light-shadow-color: rgba(51, 51, 51, 0.5); /* Цвет мягкой тени */
+
+  --color-player-1: rgba(255, 107, 107, 1); /* Цвет игрока 1 */
+  --color-player-2: rgba(78, 205, 196, 1); /* Цвет игрока 2 */
 
   --shadow-external: 0px 14px 0px -3px var(--color-text);
   --shadow-inner: 0px 15px 0px 0px var(--color-text) inset;
+  --light-shadow-inner: 0px 5px 0px 0px var(--light-shadow-color) inset;
 
   --border: 3px solid var(--color-text);
 }
