--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,10 @@
 .main_section {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100vw;
     height: 70vh;
 }
+
+
