refactor: Настроить ячейки для центрирования фишек
- Обновлён класс .cell, чтобы использовать flexbox.
- Добавлены свойства align-items: center и justify-content: center для корректного центрирования фишек внутри ячейки.
- Эти изменения готовят основу для корректного отображения фишек.

--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -21,3 +21,20 @@
   box-shadow: var(--shadow-inner);
   cursor: pointer;
 }
+
+.chip {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  box-shadow: var(--light-shadow-inner);
+  
+}
+
+
+.player_1 {
+  background-color: var(--color-player-1);
+}
+
+.player_2 {
+  background-color: var(--color-player-2);
+}
