--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -14,6 +14,9 @@
 }
 
 .cell {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   aspect-ratio: 1 / 1;
   background-color: var(--color-background);
   border: var(--border);
