--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -7,10 +7,10 @@
   aspect-ratio: 7 / 6;
   background-color: var(--color-board);
   border: var(--border);
-  border-radius: 5%;
+  border-radius: 3rem;
   box-shadow: var(--shadow-external);
-  padding: 20px;
-  gap: 8px;
+  padding: 1rem;
+  gap: 0.5rem;
 }
 
 .cell {
@@ -33,11 +33,3 @@
   
 }
 
-
-.player_1 {
-  background-color: var(--color-player-1);
-}
-
-.player_2 {
-  background-color: var(--color-player-2);
-}
