--- a/src/components/status-panel/StatusPanel.css
+++ b/src/components/status-panel/StatusPanel.css
@@ -1,10 +1,19 @@
 .status_panel {
   text-align: center;
-  width: 20vw;
-  min-width: 10rem;
+  min-width: 7rem;
   border: var(--border);
   border-radius: 1rem;
   transition: 0.2s;
-  box-shadow: var(--shadow-external)
+  box-shadow: var(--shadow-external);
+  font-size: 2em;
+  color: var(--color-text);
+  padding: 0 1em;
 }
 
+.status_draw {
+  background-color: var(--color-board)
+}
+
+.status_default {
+  background-color: var(--color-text)
+}
