--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,10 +1,29 @@
-.main_section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100vw;
-    height: 70vh;
+.game_field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
 }
 
+.board-box {
+  display: grid;
+  width: 100vw;
+  grid-template-areas: 'score1 board score2';
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  justify-items: center;
+  gap: 1em;
+  margin-bottom: 2em;
+}
 
+/* Мобильная версия */
+@media (max-width: 768px) {
+  .board-box {
+    grid-template-areas:
+      'score1 score2'
+      'board board';
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
+  }
+}
