--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,8 +6,9 @@
 
 
 body {
-  background-color: var(--color-background);
+  background-color: var(--color-primary);
   font-family: 'Underdog', sans-serif;
+  color: var(--color-text);
 }
 #root {
     min-height: 100vh;
