--- a/src/components/status-panel/StatusPanel.css
+++ b/src/components/status-panel/StatusPanel.css
@@ -1,13 +1,14 @@
 .status_panel {
   text-align: center;
-  min-width: 7rem;
+  width: 12rem;
   border: var(--border);
   border-radius: 1rem;
-  transition: 0.2s;
+  transition: background 0.2s;
   box-shadow: var(--shadow-external);
   font-size: 2em;
-  color: var(--color-text);
   padding: 0 1em;
+  position: relative;
+  top: -0.5em;
 }
 
 .status_draw {
