--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -19,7 +19,7 @@
   align-items: center;
   justify-content: center;
   aspect-ratio: 1 / 1;
-  background-color: var(--color-background);
+  background-color: var(--color-primary);
   border: var(--border);
   border-radius: 50%;
   box-shadow: var(--shadow-inner);
