--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,18 +3,18 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  justify-self: center;
   min-height: 100vh;
 }
 
 .board-box {
   display: grid;
-  width: 100vw;
+  width: 100%;
   grid-template-areas: 'score1 board score2';
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
   justify-items: center;
   gap: 1em;
-  margin-bottom: 2em;
 }
 
 /* Мобильная версия */
