--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -1,4 +1,4 @@
-.game_board {
+.game-board {
   display: grid;
   grid-template-rows: repeat(6, 1fr); /* 6 строк */
   grid-template-columns: repeat(7, 1fr); /* 7 колонок */
