--- a/src/components/game-field-header/GameFieldHeader.css
+++ b/src/components/game-field-header/GameFieldHeader.css
@@ -1,7 +1,7 @@
-.game_field_header {
+.game-field-header {
   margin-bottom: 1em;
 }
-.header_content {
+.header-content {
   width: 30vw;
   min-width: 300px;
   display: flex;
@@ -10,18 +10,18 @@
   justify-content: space-between;
 }
 
-.header_content h1 {
+.header-content h1 {
   line-height: 0;
   min-width: 4em;
   text-align: center;
 }
 
-.header_button {
+.header-button {
   width: 6em;
   cursor: pointer;
   border: var(--border);
   border-radius: 2em;
-  padding: 10px 0;
+  padding: 10px 10px;
   text-align: center;
   box-shadow: var(--shadow-external);
   background: var(--color-secondary);
@@ -29,6 +29,6 @@
   transition: background 0.3s;
 }
 
-.header_button:hover {
+.header-button:hover {
   background: var(--color-board);
 }
