--- a/src/components/status-panel/StatusPanel.css
+++ b/src/components/status-panel/StatusPanel.css
@@ -1,20 +1,49 @@
-.status_panel {
+.status-panel {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  width: 12rem;
+  gap: 0.3em;
+
+  height: 3em;
   border: var(--border);
   border-radius: 1rem;
   transition: background 0.2s;
   box-shadow: var(--shadow-external);
   font-size: 2em;
-  padding: 0 1em;
+  padding: 0.2em 1em;
   position: relative;
   top: -0.5em;
 }
 
-.status_draw {
-  background-color: var(--color-board)
+.status-panel p {
+  margin: 0;
 }
 
-.status_default {
-  background-color: var(--color-text)
+.status-draw {
+  background-color: var(--color-board);
+}
+
+.status-default {
+  background-color: var(--color-text);
+}
+
+.play-again {
+  background-color: var(--color-primary);
+  cursor: pointer;
+  border: none;
+  border-radius: 2em;
+  padding: 10px 20px;
+  text-align: center;
+  font-size: 0.5em;
+  transition: background 0.3s;
+  color: var(--color-board);
+}
+
+/* Мобильная версия */
+@media (max-width: 768px) {
+  .status-panel {
+    font-size: 1.5em;
+  }
 }
