--- a/src/components/game-components/status-panel/StatusPanel.css
+++ b/src/components/game-components/status-panel/StatusPanel.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 0.3em;
+  gap: 0.2em;
 
   height: 3em;
   border: var(--border);
@@ -26,7 +26,7 @@
 }
 
 .status-default {
-  background-color: var(--color-text);
+  background-color: var(--color-board);
 }
 
 .play-again {
@@ -39,6 +39,11 @@
   font-size: 0.5em;
   transition: background 0.3s;
   color: var(--color-board);
+}
+
+.play-again:hover {
+  background-color: var(--color-secondary);
+  color: var(--color-text);
 }
 
 /* Мобильная версия */
