--- a/src/app/App.css
+++ b/src/app/App.css
@@ -5,11 +5,11 @@
   justify-content: center;
   justify-self: center;
   min-height: 100vh;
+  padding: 0;
 }
 
 .board-box {
   display: grid;
-  width: 100%;
   grid-template-areas: 'score1 board score2';
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
