--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,12 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: 'Tochka-Script';
+  src: url('../assets/fonts/Tochka-Script.woff2') format('woff2');
+  font-display: swap;
+
+}
 
 body {
   background-color: var(--color-primary);
