--- a/src/components/game-components/start-menu/StartMenu.css
+++ b/src/components/game-components/start-menu/StartMenu.css
@@ -8,4 +8,10 @@
   padding: 0;
 }
 
+.start-menu h1 {
+  font-family: 'Tochka-Script', sans-serif;
+  font-size: 3em;
+  text-transform: uppercase;
+}
+
 
