--- a/src/components/game-components/board-menu/BoardMenu.css
+++ b/src/components/game-components/board-menu/BoardMenu.css
@@ -15,6 +15,9 @@
 }
 
 .board-menu-content h1 {
+  font-family: 'Tochka-Script', sans-serif;
+  font-size: 3em;
+  text-transform: uppercase;
   line-height: 0;
   min-width: 4em;
   text-align: center;
