refactor: перенести общие компоненты, стили и функции в директорию shared
-Общие стили, компоненты и  функции перенесены в директорию shared
-Обновлены импорты в соотвествии с текущей директорией

--- a/src/shared/styles/globals.css
+++ b/src/shared/styles/globals.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: 'Underdog';
-  src: url('../assets/fonts/Underdog-Regular.woff2') format('woff2');
+  src: url('../../assets/fonts/Underdog-Regular.woff2') format('woff2');
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Tochka-Script';
-  src: url('../assets/fonts/Tochka-Script.woff2') format('woff2');
+  src: url('../../assets/fonts/Tochka-Script.woff2') format('woff2');
   font-display: swap;
 
 }
