--- a/src/components/board/Board.css
+++ b/src/components/board/Board.css
@@ -24,6 +24,7 @@
   border-radius: 50%;
   box-shadow: var(--shadow-inner);
   cursor: pointer;
+  overflow: hidden;
 }
 
 .chip {
@@ -31,6 +32,11 @@
   height: 100%;
   border-radius: 50%;
   box-shadow: var(--light-shadow-inner);
+
+  max-width: 100%;
+  max-height: 100%;
+
+  will-change: transform;
 }
 
 .chip-winning {
@@ -40,6 +46,6 @@
 @keyframes chip-winning-pulse {
   to {
     transform: scale(0.8);
-    background-color: var(--color-secondary)
+    background-color: var(--color-secondary);
   }
 }
