--- a/src/screens/game-screen/GameScreen.css
+++ b/src/screens/game-screen/GameScreen.css
@@ -15,6 +15,8 @@
   align-items: center;
   justify-items: center;
   gap: 1em;
+  width: 100%;
+  max-width: 100%;
 }
 
 /* Мобильная версия */
@@ -25,5 +27,14 @@
       'board board';
     grid-template-columns: 1fr 1fr;
     gap: 1em;
+    padding: 0 1rem;
+  }
+}
+
+
+@media (max-width: 480px) {
+  .board-box {
+    gap: 0.5em;
+    padding: 0 0.5rem;
   }
 }
