--- a/src/components/board/Board.css
+++ b/src/components/board/Board.css
@@ -32,20 +32,18 @@
   height: 100%;
   border-radius: 50%;
   box-shadow: var(--light-shadow-inner);
-
   max-width: 100%;
   max-height: 100%;
-
   will-change: transform;
 }
 
 .chip-winning {
   animation: 0.5s linear infinite alternate chip-winning-pulse;
+  will-change: transform;
 }
 
 @keyframes chip-winning-pulse {
   to {
     transform: scale(0.8);
-    background-color: var(--color-secondary);
   }
 }
