--- a/src/components/board/Board.css
+++ b/src/components/board/Board.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-rows: repeat(6, 1fr); /* 6 строк */
   grid-template-columns: repeat(7, 1fr); /* 7 колонок */
-  width: 30vw;
+  width: 35vw;
   min-width: 300px;
   aspect-ratio: 7 / 6;
   background-color: var(--color-board);
@@ -12,6 +12,16 @@
   padding: 1rem;
   gap: 0.5rem;
   grid-area: board;
+}
+.board-box {
+  display: grid;
+  grid-template-areas: 'score1 board score2';
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  justify-items: center;
+  gap: 1em;
+  width: 100%;
+  max-width: 100%;
 }
 
 .cell {
@@ -45,5 +55,26 @@
 @keyframes chip-winning-pulse {
   to {
     transform: scale(0.8);
+  }
+}
+
+/* Мобильная версия */
+@media (max-width: 768px) {
+  .board-box {
+    grid-template-areas:
+      'score1 score2'
+      'board board';
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
+    padding: 0 1rem;
+  }
+  .game-board {
+    width: 45vh;
+  }
+}
+
+@media (max-width: 480px) {
+  .board-box {
+    padding: 0 0.5rem;
   }
 }
