style: добавить шрифт для кнопок

--- a/src/shared/ui/button/Button.css
+++ b/src/shared/ui/button/Button.css
@@ -1,4 +1,5 @@
 .button {
+  font-family: 'Underdog', sans-serif;
   color: var(--color-text);
   cursor: pointer;
   border: var(--border);
@@ -7,7 +8,7 @@
   text-align: center;
   box-shadow: var(--shadow-external);
   transition: all 0.3s;
- 
+
   -webkit-tap-highlight-color: transparent;
 
   -webkit-user-select: none;
